--- a/about_bomojay.html
+++ b/about_bomojay.html
@@ -48,9 +48,8 @@
     <div class="jumbotron text-center mt-0" style="background-color: #FFF; border-radius: 0%;">
         <h1 class="display-3" style="color: #3a86ff;">About us</h1>
         <hr class="my-4" style="border-color: #ffd500;">
-        <p class="display-4" style="color: #000; font-weight: 400; font-size: larger;">Flaka Cloud Restaurant in Pretoria offers a delightful taste of Kasi cuisine in a cozy and welcoming atmosphere. The establishment boasts a simple yet tasteful interior design, with reasonable prices that won't break the bank. Located in Mamelodi West, this fine dining spot is a popular local hangout that accommodates families with children.
-<br><br>
-            The menu offers a variety of dishes that cater to all tastes, such as the Mixed Grill, Boerewors Sandwich, and the mouth-watering Ribs. The drinks menu includes soft drinks like Coke and Fanta, as well as cocktails like the Passion Fruit and Lemonade mix. For those who prefer wine, the establishment offers a selection of Gordons gin mixes.</p>
+        <p class="display-4" style="color: #000; font-weight: 400; font-size: larger;">Embarking on a journey isn't just about the places we visit; it's an immersive experience that intertwines with our essence. Traveling and exploring unveil a narrative that resonates deep within us—a tale crafted by diverse landscapes, vibrant cultures, and unique encounters. 
+          <br><br>Every expedition is an opportunity to embrace the unknown, to learn, grow, and create lasting memories. It's about savoring the beauty of the world, capturing moments that linger in our hearts, and painting the canvas of our lives with the colors of each adventure.</p>
         <br><a class="btn btn-lg" style="border-color: #780116; border-width: 2px; color: #3a86ff; border-radius: 0%;" href="Gallery.html" role="button">Gallery</a>
       </div>
     </div>
