--- a/contactus.html
+++ b/contactus.html
@@ -49,9 +49,9 @@
                 Contact Information
             </div>
             <div class="card-body">
-                <p><strong>Address:</strong> 123 Main Street, Cityville</p>
-                <p><strong>Phone:</strong> (555) 123-4567</p>
-                <p><strong>Email:</strong> info@example.com</p>
+                <p><strong>Address:</strong> Extension 5 kopanong Soshanguve Pretoria, 0152</p>
+                <p><strong>Phone:</strong> 072 341 1622</p>
+                <p><strong>Email:</strong> bomojaytravelandtours@yahoo.com</p>
             </div>
         </div>
 
@@ -71,7 +71,7 @@
             </div>
             <div class="card-body">
                 <p>Contact us on WhatsApp for quick assistance and support.</p>
-                <p><strong>WhatsApp Number:</strong> +123 456 7890</p>
+                <p><strong>WhatsApp Number:</strong> 072 341 1622</p>
             </div>
         </div>
 
@@ -81,7 +81,7 @@
             </div>
             <div class="card-body">
                 <p>Send us an email for inquiries and feedback.</p>
-                <a href="mailto:info@example.com" class="btn btn-primary">Send Email</a>
+                <a href="mailto:bomojaytravelandtours@yahoo.com" class="btn btn-primary">Send Email</a>
             </div>
         </div>
     </div>
