--- a/Service.html
+++ b/Service.html
@@ -43,7 +43,7 @@
 
 
 <div class="container mt-5"  >
-  <h2 class="text-center mb-4">Upcoming Events</h2>
+  <h1 class="display-3 text-center" style="color: #3a86ff;">Upcoming Events</h1>
 
   <div class="card" >
     <div class="card-body">
