--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <!-- First Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: #780116;">
-  <a class="display-2 navbar-brand col-6" style="color: #fff; font-size: 45px;" href="INDEX.HTML">BOMOJAY</a>
+  <a class="display-2 navbar-brand col-6" style="color: #fff; font-size: 45px;" href="index.html">BOMOJAY</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
