--- a/Service.html
+++ b/Service.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
     <title>BOMOJAY</title>
     <style>
       .navbar-nav {
@@ -15,8 +19,9 @@
 <body>
 
 <!-- First Navigation Bar -->
-<nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: #780116;">
-  <a class="display-2 navbar-brand col-6" style="color: #fff; font-size: 45px;" href="index.html">BOMOJAY</a>
+<nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: white;">
+  <img src="img_&_Vids/logo bomojay.png" style="height: 75px;" alt="company Logo">
+  <a class="display-2 navbar-brand col-6" style="color: #008000; font-size: 45px;" href="index.html">BOMOJAY</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -29,7 +34,7 @@
         <a class="nav-link" href="about_bomojay.html">About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active"style="color: #fff;"  href="Service.html">Events</a>
+        <a class="nav-link active"style="color: #00a8e8;"  href="Service.html">Events</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="contactus.html">Contact</a>
@@ -43,8 +48,9 @@
 
 
 <div class="container mt-5"  >
-  <h1 class="display-3 text-center" style="color: #3a86ff;">Upcoming Events</h1>
-
+  <div class="container pb-4">
+  <h1 class="display-3 text-center " style="color: #bfd8bd; background-color: #054a29; height: max-content;">Upcoming Events</h1>
+</div>
   <div class="card" >
     <div class="card-body">
       <h5 class="card-title" style="color: white;">Trip to City A</h5>
@@ -82,29 +88,38 @@ function countPeople(tripName) {
 </script>
 
 
-
-
-
-
 <!-- footer -->
 
 <div class="jumbotron-fluid pt-0">
-  <div class="container-fluid" style="background-color: #780116; width: 100%; height:max-content;">
+  <div class="container-fluid" style="background-color: #054a29; width: 100%; height:max-content;">
     <div class="row text-center pt-4" >
       <div class="col-sm-6 ">
-        <h5 class="display-4" style="color: white; font-size: xx-large; font-weight: 300;">LOCATION</h5>
-        <p>Content for column 1 goes here.</p>
+        <h5 class="display-4" style="color: #bfd8bd; font-size: xx-large; font-weight: 300;">Get Directions</h5>
+          <i class="fas fa-map-marker-alt" style="color: #00a8e8;"></i> <!-- Icon for address -->
+          <a href="https://www.google.com/maps/dir/?api=1&destination=Tsweu+St,+Mamelodi+-+SAS,+Pretoria,+0122"
+            target="_blank"> Extension 5 kopanong <br> Soshanguve Pretoria <br> 0152</a>
+        
       </div>
       <div class="col-sm-6 ">
-        <h5 class="display-4" style="color: white; font-size: xx-large; font-weight: 300;">CONTACT</h5>
-        <p>Content for column 2 goes here.</p> 
+        <h5 class="display-4" style="color: #bfd8bd; font-size: xx-large; font-weight: 300;">CONTACT</h5>
+        <a href="mailto:bomojaytravelandtours@yahoo.com">
+          <i class="fas fa-envelope"></i> bomojaytravelandtours@yahoo.com <br> </a>
+        <a href="tel:072 341 1622">
+          <i class="fas fa-phone"></i> 072 341 1622 </a> <a style="color: #00a8e8;">  |  </a>
+        <a href="tel:079 305 6466">
+         079 305 6466</a>
+          <br>
+          <a href="https://www.facebook.com/profile.php?id=100094248556071" target="_blank" style="margin-right: 10px; font-size: 24px;"><i class="fab fa-facebook"></i></a>
+          <a href="" style="margin-right: 10px; font-size: 24px; color: orange;"><i class="fab fa-instagram"></i></a>
+          <a href="" style="margin-right: 10px; font-size: 24px; color: aqua;"><i class="fab fa-twitter"></i></a>
+          <a href="https://chat.whatsapp.com/CKRcaxsGVTx7Ou915qTPKb" style="font-size: 24px; color: white;"><i class="fab fa-whatsapp"></i></a>
+          
       </div>
     </div>
-    <hr style="border-color: #3a86ff;">
-    <p class="display-4 text-center pb-3" style="color: #3a86ff; font-weight: 400; font-size: large;">2023 |<a href="https://lebohangluuh.github.io/LP-Mofokeng-profile" target="_blank">Lebohang Mofokeng </a> | Copyright ©</p>
+    <hr style="border-color: #00a8e8;">
+    <p class="display-4 text-center pb-3" style="color: #00a8e8; font-weight: 400; font-size: large;">2023 |<a href="https://lebohangluuh.github.io/LP-Mofokeng-profile" target="_blank">Lebohang Mofokeng </a> | Copyright ©</p>
   </div>
 </div>
-
 
 <!-- Bootstrap JS and Popper.js -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
