reduced font on company name

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <!-- First Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: white;">
   <img src="img_&_Vids/logo bomojay.png" style="height: 75px;" alt="company Logo">
-  <a class="display-2 navbar-brand col-6" style="color: #008000; font-size: 45px;" href="index.html">BOMOJAY</a>
+  <a class="display-2 navbar-brand col-6" style="color: #008000; font-size: 35px;" href="index.html">BOMOJAY</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -99,7 +99,7 @@
 
 <div class="container mt-3 pb-1 mb-2" style="color: #bfd8bd; background-color: #054a29;">
 
-<p class="display-3" style="font-size: larger; color: #bfd8bd;">Explore the world with BOMOJAY and experience the Beauty of our nation.</p>
+<p class="display-4 text-center" style="font-size: xx-large; color: #bfd8bd;">Explore the world with BOMOJAY and experience the Beauty of our nation.</p>
 </div>
 
 <!-- footer -->
